--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,8 @@
     }
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "scripts": ["background.js"]
   },
   "commands": {
     "undo-seek": {
