--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,10 @@
     }
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "scripts": [
+      "background.js"
+    ]
   },
   "commands": {
     "undo-seek": {
